Fixed the bug with collapsing data sources

--- a/web_external/stylesheets/body/dataPanel.styl
+++ b/web_external/stylesheets/body/dataPanel.styl
@@ -3,11 +3,14 @@
 
   .source-title
     font-weight bold
+    text-align left
+    padding 10px
+    border-style solid
+    border-width 1px
     
-  .datasets
-    display none
+  .source-title:hover
     background-color #d6d6d6
-  
+    
   .dataset
     padding-left 0px
     text-align left
